fix video list overflow scroll

--- a/client/src/ui/GameRoom/sidePanel/media/media.scss
+++ b/client/src/ui/GameRoom/sidePanel/media/media.scss
@@ -8,6 +8,7 @@
     background-color: #8C93A8 !important;
 }
 .media-area {
-    padding: 1.25rem
+    padding: 0.5rem;
+    min-height: 0;
 }
 
